hobbby modal dropdown z-index issue + search dropdown people and place issue

--- a/src/components/_modals/EditProfile/Hobby/styles.module.css
+++ b/src/components/_modals/EditProfile/Hobby/styles.module.css
@@ -37,7 +37,6 @@
   }
   .modal-wrapper .body {
     height: 100%;
-    overflow: auto;
     flex: 1;
   }
 }
